--- a/language/ru-RU/plg_system_cfi.ini
+++ b/language/ru-RU/plg_system_cfi.ini
@@ -7,68 +7,75 @@ PLG_CFI="Система - CFI"
 PLG_CFI_DESC="Плагин импорта и экспорта материалов с участием дополнительных полей"
 PLG_CFI_PARAM_CP="Кодовая страница для конвертации файлов"
 PLG_CFI_PARAM_SHOWDESC="Показывать описание о формате импортируемого файла"
-PLG_CFI_BUTTON="Импорт и экспорт данных CSV"
-PLG_CFI_TITLE="Импорт и экспорт данных данных из CSV и в CSV"
+PLG_CFI_BUTTON="Импорт / экспорт в CSV"
+PLG_CFI_BUTTON_TITLE="Импорт и экспорт данных данных из CSV и в CSV"
 PLG_CFI_CB_UTF_CONVERT="Преобразовывать кодировку UTF-8 <=> %s (кодировка выбирается в параметрах плагина, применяется для табличных редакторов)"
 
-PLG_CFI_SELECT_CATEGORIES="– Выберите категорию –"
-PLG_CFI_BTN_EXPORT="Экспортировать материалы"
+PLG_CFI_EXPORT = "Экспорт"
+PLG_CFI_EXPORT_PARAMS_LABEL="Параметры экспорта"
+PLG_CFI_EXPORT_PARAMS_USE_TAGS = "Выгружаем теги"
+PLG_CFI_EXPORT_PARAMS_USE_CUSTOM_FIELDS = "Выгружаем поля"
+PLG_CFI_EXPORT_PARAMS_ARTICLE_PROPS_LIST = "Данные материала"
+
 PLG_CFI_NO_SELECT_CATEGORY="Не выбрана категория для экспорта. Дополнительные поля материалов привязаны к категориям, поэтому выбор категори обязателен."
+
 PLG_CFI_EXPORT_SUCCESS="Экспорт завершён"
 PLG_CFI_EXPORT_ERROR="Ошибка экспорта данных"
-PLG_CFI_EXPORT_NO_CATEGORY="Категория не указана или указана некорректно"
-PLG_CFI_EXPORT_GET_CONTENT="Ошибка получения списка материалов"
-PLG_CFI_EXPORT_EMPTY_CONTENT="Список материалов указанной категории пуст"
+
+PLG_CFI_EXPORT_CUSTOM_FIELDS_DISCLAIMER="Пользовательские поля материалов могут принадлежать разным категориям. Убедитесь, что все выбранные категории имеют одинаковый набор полей. Иначе при экспорте возможны ошибки структуры данных."
 PLG_CFI_EXPORT_FILE_CREATE="Ошибка создания результирующего файла: нет доступа для записи файла"
 PLG_CFI_EXPORT_ERROR_CONVERT="Ошибка перекодирования файла в указанную кодировку"
 PLG_CFI_EXPORT_ERROR_AFTER_CONVERT="Ошибка записи файла после перекодирования"
 PLG_CFI_EXPORT_ERROR_BEFORE_CONVERT="Ошибка чтения файла для перекодирования"
 
-PLG_CFI_FILELABEL="Выберите файл или перетащите его сюда для импорта данных"
-PLG_CFI_FILELABEL_WORKTITLE="Ожидайте загрузки файла и обработки данных в нём..."
-PLG_CFI_FILELABEL_SUCCESS="Обработка файла завершена. Страница обновится через <span id='cfi-result-counter'>10</span> сек."
-PLG_CFI_FILELABEL_ERROR="Ошибка"
+; Import
+PLG_CFI_IMPORT = "Импорт"
+PLG_CFI_IMPORT_UPLOAD_DRAG_FILE_HERE="Перетащите в поле файл для загрузки"
 
-PLG_CFI_FILE_NOTHING="Отсутствует файл для загрузки"
-PLG_CFI_FILE_ERROR="Ошибка загрузки файла"
-PLG_CFI_FILE_SIZE="Ошибка размера файла: файл пуст"
-PLG_CFI_FILE_TYPE="Некорректный тип файла: ожидается CSV"
-PLG_CFI_FILE_MOVE="Ошибка получения файла из временного окружения сервера"
+PLG_CFI_IMPORT_UPLOAD_ERROR_UPLOAD_NO_FILE = "Не указан файл"
+PLG_CFI_IMPORT_UPLOAD_ERROR_UPLOAD_FILE_TOO_BIG = "Выбранный файл слишком большой"
+PLG_CFI_IMPORT_UPLOAD_ERROR_UPLOAD_WRONG_MIME_TYPE = "Неверный MIME-тип файла"
+PLG_CFI_IMPORT_UPLOAD_ERROR_UPLOAD_UNKNOWN = "Неизвестная ошибка или некорректный вывод JSON."
+PLG_CFI_IMPORT_UPLOAD_ERROR_UPLOAD_EMPTY = "Ошибка: Сервер вернул пустой ответ."
+PLG_CFI_IMPORT_UPLOAD_FILE_OK = "Файл успешно загружен"
+PLG_CFI_IMPORT_UPLOAD_SELECT_FILE = "Или выберите файл"
+
+PLG_CFI_IMPORT_UPLOAD_WARN_SERVER_DENY_FILE_UPLOAD = "На сервере запрещена загрузка файлов"
+PLG_CFI_IMPORT_UPLOAD_WARN_NO_FILE_SELECTED = "Ошибка получения файла из временного окружения сервера"
+PLG_CFI_IMPORT_UPLOAD_WARN_UPLOADERROR = "Не удалось загрузить файл на сервер."
+PLG_CFI_IMPORT_UPLOAD_FAIL="Ошибка перемещения файла во временный каталог для дальнейшей обработки"
+
+PLG_CFI_IMPORT_UPLOADED_FILE_INFO_FILENAME ="Файл"
+PLG_CFI_IMPORT_UPLOADED_FILE_INFO_LINES ="Количество строк"
+
+;PLG_CFI_FILELABEL="Выберите файл или перетащите его сюда для импорта данных"
+;PLG_CFI_FILELABEL_WORKTITLE="Ожидайте загрузки файла и обработки данных в нём..."
+;PLG_CFI_FILELABEL_SUCCESS="Обработка файла завершена. Страница обновится через <span id='cfi-result-counter'>10</span> сек."
+;PLG_CFI_FILELABEL_ERROR="Ошибка"
 
 PLG_CFI_IMPORT_GET_CATEGORIES="Ошибка получения списка категорий материалов"
 PLG_CFI_IMPORT_EMPTY="Файл не содержит данных для импорта или не содержит строку заголовков полей"
-PLG_CFI_IMPORT_NO_COLUMN="Отсутсвуют обязательные поля articleid и articletitle"
+PLG_CFI_IMPORT_NO_COLUMN="Отсутствуют обязательные поля articleid и articletitle"
 PLG_CFI_IMPORT_COLUMN_EXCEPT="Кол-во значений в строке не соответствует кол-ву объявленных колонок"
 PLG_CFI_IMPORT_LOAD_ARTICLE="Ошибка загрузки материала с id %s"
 PLG_CFI_IMPORT_SAVE_ARTICLE="Ошибка сохранения материала"
 PLG_CFI_IMPORT_SAVENEW_ARTICLE="Материал сохранён как новый"
 PLG_CFI_IMPORT_SAVE_FIELDS="Ошибка сохранения значений полей: %s"
 
+PLG_CFI_IMPORT_CFI_IMPORT_PROGRESS_DATA_CONTINUES="Пропущено"
+PLG_CFI_IMPORT_CFI_IMPORT_PROGRESS_DATA_ERRORS="Ошибок"
+PLG_CFI_IMPORT_CFI_IMPORT_PROGRESS_DATA_INSERTS="Новых"
+PLG_CFI_IMPORT_CFI_IMPORT_PROGRESS_DATA_UPDATES="Обновлено"
+PLG_CFI_IMPORT_CFI_IMPORT_PROGRESS_DATA_ERROR_LIST="Список ошибок"
+
+
+
 PLG_CFI_RESULT="<span>Импортировано записей из файла: <strong>%s</strong> <br>Добавлено новых материалов: <strong>%s</strong> <br>Обновлено материалов: <strong>%s</strong></span>"
 PLG_CFI_RESULT_ERROR="<span class='text-error'>Необработанных строк файла: <strong>%s</strong></span>"
 
 PLG_CFI_DESC_FORMAT_LABEL="Описание формата файла"
-PLG_CFI_DESC_FORMAT="<p><strong>Описание формата файла импортируемых материалов с участием дополнительных полей</strong></p>
-<p>Формат файла импортируемых либо экспортируемых данных: <strong>CSV</strong>, кодировка файла по умолчанию, если не установлена опция «Преобразовывать кодировку…»: <strong>UTF-8 w/o BOM</strong>. Разделителем данных в CSV-файле должен быть только символ <code>;</code>.</p>
-<p>Первая строка файла всегда представляет собой заголовки полей файла.</p>
-<p>Зарезервированные имена полей:</p>
-<p><code>articleid</code> – id обновляемого материала, содержит значение 0 для вновь добавляемого материала, игнорирует строки для материалов с несуществующим id (<i>обязательное поле</i>);</p>
-<p><code>articletitle</code> – заголовок материала (<i>обязательное поле</i>);</p>
-<p><code>articlecat</code> – id категории материала, для новых материалов при отстутсвии поля или указания id несуществующей категории будет применена категория «Uncategorised», для существующих материалов игнорируется;</p>
-<p><code>articlelang</code> – язык материала, для новых материалов при отстутствии поля материал будет доступен для всех языков, для существующих материалов игнорируется;</p>
-<p><code>articleintrotext</code> – вступительный текст материала;</p>
-<p><code>articlefulltext</code> – полный текст материала.</p>
-<p>Поля <i>articleid</i> и <i>articletitle</i> являются обязательными, при их отстутствии импорт данных из файла не производится.</p>
-<p>Любые иные имена полей принимаются за имена дополнительных полей материала. В случаях отстутствия у материала указанных полей последние будут игнорироваться.</p>
-<p>Несоответствие кол-ва значений в строке несоответствию кол-ву заголовков полей приводит к отказу от обработки этой строки.</p>
-<p>Даные об ошибках импорта хранятся в логе <i>cfi.php</i> в стандартной папке логов Joomla.</p>
-<p>При отсутсвии ошибок импорта данных импортируемый файл удаляется, в противном случае файл сохраняется в стандартной папке временных файлов Joomla.</p>"
-
+PLG_CFI_DESC_FORMAT="<p><strong>Описание формата файла импортируемых материалов с участием дополнительных полей</strong></p><p>Формат файла импортируемых либо экспортируемых данных: <strong>CSV</strong>, кодировка файла по умолчанию, если не установлена опция «Преобразовывать кодировку…»: <strong>UTF-8 w/o BOM</strong>. Разделителем данных в CSV-файле должен быть только символ <code>;</code>.</p><p>Первая строка файла всегда представляет собой заголовки полей файла.</p><p>Зарезервированные имена полей:</p><p><code>articleid</code> – id обновляемого материала, содержит значение 0 для вновь добавляемого материала, игнорирует строки для материалов с несуществующим id (<i>обязательное поле</i>);</p><p><code>articletitle</code> – заголовок материала (<i>обязательное поле</i>);</p><p><code>articlecat</code> – id категории материала, для новых материалов при отстутсвии поля или указания id несуществующей категории будет применена категория «Uncategorised», для существующих материалов игнорируется;</p><p><code>articlelang</code> – язык материала, для новых материалов при отстутствии поля материал будет доступен для всех языков, для существующих материалов игнорируется;</p><p><code>articleintrotext</code> – вступительный текст материала;</p><p><code>articlefulltext</code> – полный текст материала.</p><p>Поля <i>articleid</i> и <i>articletitle</i> являются обязательными, при их отстутствии импорт данных из файла не производится.</p><p>Любые иные имена полей принимаются за имена дополнительных полей материала. В случаях отстутствия у материала указанных полей последние будут игнорироваться.</p><p>Несоответствие кол-ва значений в строке несоответствию кол-ву заголовков полей приводит к отказу от обработки этой строки.</p><p>Даные об ошибках импорта хранятся в логе <i>cfi.php</i> в стандартной папке логов Joomla.</p><p>При отсутсвии ошибок импорта данных импортируемый файл удаляется, в противном случае файл сохраняется в стандартной папке временных файлов Joomla.</p>"
 PLG_CFI_DESC_WARN_LABEL="Отказ от ответственности"
-PLG_CFI_DESC_WARN="<p>Данные дополнительных полей записываются в БД прямыми запросами и не подвергаются какой-либо обработке.
-Ввиду того, что в этих данных могут присутствовать теги html-разметки, json-строки или иные строковые конструкции, содержащие специализированные символы,
-<strong>экранирование данных не производится!</strong> Пожалуйста, обеспечьте безопасность импортируемых данных на этапе генерации файла для импорта данных в Joomla.</p>
-<hr>
-<p class='text-error'><strong>Разработчик плагина не несёт ответственность за некорректное содержимое импортируемых файлов, которое может вывести из строя ваш сайт</strong>.</p>"
+PLG_CFI_DESC_WARN="<p>Данные дополнительных полей записываются в БД прямыми запросами и не подвергаются какой-либо обработке. Ввиду того, что в этих данных могут присутствовать теги html-разметки, json-строки или иные строковые конструкции, содержащие специализированные символы, <strong>экранирование данных не производится!</strong> Пожалуйста, обеспечьте безопасность импортируемых данных на этапе генерации файла для импорта данных в Joomla.</p><hr><p class='text-error'><strong>Разработчик плагина не несёт ответственность за некорректное содержимое импортируемых файлов, которое может вывести из строя ваш сайт</strong>.</p>"
 
 PLG_CFI_DESC_SD="<small><i>Показ описания формата импортируемого файла можно отключить в параметрах плагина cfi.</i></small>"
