Вроде уже почти-почти

--- a/language/en-GB/plg_system_cfi.ini
+++ b/language/en-GB/plg_system_cfi.ini
@@ -59,6 +59,9 @@ PLG_CFI_IMPORT_SAVE_ARTICLE="Error saving article"
 PLG_CFI_IMPORT_SAVENEW_ARTICLE="Article saved as new"
 PLG_CFI_IMPORT_SAVE_FIELDS="Error saving field values: %s"
 
+PLG_CFI_IMPORT_SUCCESS="Import complete"
+PLG_CFI_IMPORT_ERROR="Error importing data"
+
 PLG_CFI_RESULT="<span>Imported records from file: <strong>%s</strong><br>New articles added: <strong>%s</strong><br>Updated articles: <strong>%s</strong></span>"
 PLG_CFI_RESULT_ERROR="<span class='text-error'>Raw file lines: <strong>%s</strong></span>"
 
