--- a/language/ru-RU/plg_system_cfi.ini
+++ b/language/ru-RU/plg_system_cfi.ini
@@ -17,7 +17,7 @@ PLG_CFI_EXPORT_PARAMS_USE_TAGS = "Выгружаем теги"
 PLG_CFI_EXPORT_PARAMS_USE_CUSTOM_FIELDS = "Выгружаем поля"
 PLG_CFI_EXPORT_PARAMS_ARTICLE_PROPS_LIST = "Данные материала"
 
-PLG_CFI_NO_SELECT_CATEGORY="Не выбрана категория для экспорта. Дополнительные поля материалов привязаны к категориям, поэтому выбор категори обязателен."
+;PLG_CFI_NO_SELECT_CATEGORY="Не выбрана категория для экспорта. Дополнительные поля материалов привязаны к категориям, поэтому выбор категори обязателен."
 
 PLG_CFI_EXPORT_SUCCESS="Экспорт завершён"
 PLG_CFI_EXPORT_ERROR="Ошибка экспорта данных"
@@ -67,7 +67,8 @@ PLG_CFI_IMPORT_CFI_IMPORT_PROGRESS_DATA_ERRORS="Ошибок"
 PLG_CFI_IMPORT_CFI_IMPORT_PROGRESS_DATA_INSERTS="Новых"
 PLG_CFI_IMPORT_CFI_IMPORT_PROGRESS_DATA_UPDATES="Обновлено"
 PLG_CFI_IMPORT_CFI_IMPORT_PROGRESS_DATA_ERROR_LIST="Список ошибок"
-
+PLG_CFI_IMPORT_SUCCESS="Импорт завершён"
+PLG_CFI_IMPORT_ERROR="Ошибка импорта данных"
 
 
 PLG_CFI_RESULT="<span>Импортировано записей из файла: <strong>%s</strong> <br>Добавлено новых материалов: <strong>%s</strong> <br>Обновлено материалов: <strong>%s</strong></span>"
