Добавлена кнопка стоп для процесса и логика к ней. Правки по импорту

--- a/language/en-GB/plg_system_cfi.ini
+++ b/language/en-GB/plg_system_cfi.ini
@@ -70,3 +70,4 @@ PLG_CFI_DESC_FORMAT="<p><strong>Description of the file format of the imported a
 PLG_CFI_DESC_WARN_LABEL="Disclaimer"
 PLG_CFI_DESC_WARN="<p>The data of additional fields are written to the database by direct queries and are not subjected to any processing. Due to the fact that html markup tags, json strings or other string constructs containing specialized characters may be present in this data, <strong>Data is not shielded!</strong> Please ensure the safety of the imported data during the generation of the file for importing data into Joomla.</p><hr><p class='text-error'><strong>The plugin developer is not responsible for the incorrect contents of the imported files, which may damage your site</strong>.</p>"
 PLG_CFI_DESC_SD="<small><i>The display of the format description of the imported file can be disabled in the cfi plugin settings.</i></small>"
+PLG_CFI_PROCESS_CANCELED_BY_USER = "Process canceled by user"
