--- a/language/ru-RU/plg_system_cfi.ini
+++ b/language/ru-RU/plg_system_cfi.ini
@@ -80,3 +80,4 @@ PLG_CFI_DESC_WARN_LABEL="Отказ от ответственности"
 PLG_CFI_DESC_WARN="<p>Данные дополнительных полей записываются в БД прямыми запросами и не подвергаются какой-либо обработке. Ввиду того, что в этих данных могут присутствовать теги html-разметки, json-строки или иные строковые конструкции, содержащие специализированные символы, <strong>экранирование данных не производится!</strong> Пожалуйста, обеспечьте безопасность импортируемых данных на этапе генерации файла для импорта данных в Joomla.</p><hr><p class='text-error'><strong>Разработчик плагина не несёт ответственность за некорректное содержимое импортируемых файлов, которое может вывести из строя ваш сайт</strong>.</p>"
 
 PLG_CFI_DESC_SD="<small><i>Показ описания формата импортируемого файла можно отключить в параметрах плагина cfi.</i></small>"
+PLG_CFI_PROCESS_CANCELED_BY_USER = "Процесс отменён пользователем"
