--- a/language/en-GB/plg_system_cfi.ini
+++ b/language/en-GB/plg_system_cfi.ini
@@ -53,7 +53,7 @@ PLG_CFI_FILE_TYPE="Invalid file type: expected CSV"
 PLG_CFI_IMPORT_GET_CATEGORIES="Error getting list of article categories"
 PLG_CFI_IMPORT_EMPTY="The file does not contain data to import or does not contain a row of field headers"
 PLG_CFI_IMPORT_NO_COLUMN="There are no required articleid and articletitle fields"
-PLG_CFI_IMPORT_COLUMN_EXCEPT="The number of values ​​in the row does not match the number of declared columns"
+PLG_CFI_IMPORT_COLUMN_EXCEPT="The number of values in the row does not match the number of declared columns"
 PLG_CFI_IMPORT_LOAD_ARTICLE="Error loading article with id %s"
 PLG_CFI_IMPORT_SAVE_ARTICLE="Error saving article"
 PLG_CFI_IMPORT_SAVENEW_ARTICLE="Article saved as new"
@@ -62,8 +62,8 @@ PLG_CFI_IMPORT_SAVE_FIELDS="Error saving field values: %s"
 PLG_CFI_IMPORT_SUCCESS="Import complete"
 PLG_CFI_IMPORT_ERROR="Error importing data"
 
-PLG_CFI_RESULT="<span>Imported records from file: <strong>%s</strong><br>New articles added: <strong>%s</strong><br>Updated articles: <strong>%s</strong></span>"
-PLG_CFI_RESULT_ERROR="<span class='text-error'>Raw file lines: <strong>%s</strong></span>"
+PLG_CFI_RESULT="Imported records from file: %s. New articles added: %s. Updated articles: %s"
+PLG_CFI_RESULT_ERROR="Raw file lines: %s"
 
 PLG_CFI_DESC_FORMAT_LABEL="Description of the file format"
 PLG_CFI_DESC_FORMAT="<p><strong>Description of the file format of the imported articles with additional fields</strong></p><p>File format for imported data: <strong>CSV</strong>. Default a file encoding, if the option «Convert encoding…» is not set: <strong>UTF-8 w/o BOM</strong>. The data separator in the CSV file must be only the <code>;</code> symbol.</p><p>The first line of a file is always the file field headers.</p><p>Reserved field names:</p><p><code>articleid</code> – id of the updated article, contains 0 for newly added article, ignores rows for articles with non-existent id (<i>required field</i>);</p><p><code>articlecat</code> – id of the category of the article, for new articles if the field is missing or the id of the nonexistent category is specified, the category «Uncategorised» will be used, for existing articles will be ignored;<p><code>articletitle</code> – article title (<i>required field</i>);</p><p><code>articlelang</code> – language of the article, if this field is absent, the article will be available for all languages;</p><p><code>articleintrotext</code> – introductory text of the article;</p><p><code>articlefulltext</code> – the full text of the article.</p><p>The fields <i>articleid</i> and <i>articletitle</i> are required; if they are absent, data will not be imported from the file.</p><p>Any other field names are taken as the names of additional article fields. In cases of absence of the indicated fields from the article, the latter will be ignored.</p><p>Inconsistency of the number of values ​​in the row to the discrepancy in the number of field headers leads to the refusal to process this row.</p><p>Data on import errors is stored in the <i>cfi.php</i> log in the standard Joomla log folder.</p><p>If there are no data import errors, the imported file is deleted, otherwise the file is saved in the standard Joomla temporary files folder.</p>"
