В модальном окне управляющая форма. новые языковые ленги

--- a/language/ru-RU/plg_system_cfi.ini
+++ b/language/ru-RU/plg_system_cfi.ini
@@ -16,9 +16,10 @@ PLG_CFI_EXPORT_PARAMS_LABEL="Параметры экспорта"
 PLG_CFI_EXPORT_PARAMS_USE_TAGS = "Выгружаем теги"
 PLG_CFI_EXPORT_PARAMS_USE_CUSTOM_FIELDS = "Выгружаем поля"
 PLG_CFI_EXPORT_PARAMS_ARTICLE_PROPS_LIST = "Данные материала"
-
-;PLG_CFI_NO_SELECT_CATEGORY="Не выбрана категория для экспорта. Дополнительные поля материалов привязаны к категориям, поэтому выбор категори обязателен."
-
+PLG_CFI_EXPORT_DOWNLOAD_BTN = "Скачать"
+PLG_CFI_EXPORT_FILTER_LABEL="Применённые фильтры"
+PLG_CFI_EXPORT_ARTICLE_PROPS_LABEL="Свойства материала"
+PLG_CFI_EXPORT_ARTICLE_FIELDS_LABEL="Пользовательские поля"
 PLG_CFI_EXPORT_SUCCESS="Экспорт завершён"
 PLG_CFI_EXPORT_ERROR="Ошибка экспорта данных"
 
@@ -76,6 +77,7 @@ PLG_CFI_RESULT_ERROR="Необработанных строк файла: %s"
 
 PLG_CFI_DESC_FORMAT_LABEL="Описание формата файла"
 PLG_CFI_DESC_FORMAT="<p><strong>Описание формата файла импортируемых материалов с участием дополнительных полей</strong></p><p>Формат файла импортируемых либо экспортируемых данных: <strong>CSV</strong>, кодировка файла по умолчанию, если не установлена опция «Преобразовывать кодировку…»: <strong>UTF-8 w/o BOM</strong>. Разделителем данных в CSV-файле должен быть только символ <code>;</code>.</p><p>Первая строка файла всегда представляет собой заголовки полей файла.</p><p>Зарезервированные имена полей:</p><p><code>articleid</code> – id обновляемого материала, содержит значение 0 для вновь добавляемого материала, игнорирует строки для материалов с несуществующим id (<i>обязательное поле</i>);</p><p><code>articletitle</code> – заголовок материала (<i>обязательное поле</i>);</p><p><code>articlecat</code> – id категории материала, для новых материалов при отстутсвии поля или указания id несуществующей категории будет применена категория «Uncategorised», для существующих материалов игнорируется;</p><p><code>articlelang</code> – язык материала, для новых материалов при отстутствии поля материал будет доступен для всех языков, для существующих материалов игнорируется;</p><p><code>articleintrotext</code> – вступительный текст материала;</p><p><code>articlefulltext</code> – полный текст материала.</p><p>Поля <i>articleid</i> и <i>articletitle</i> являются обязательными, при их отстутствии импорт данных из файла не производится.</p><p>Любые иные имена полей принимаются за имена дополнительных полей материала. В случаях отстутствия у материала указанных полей последние будут игнорироваться.</p><p>Несоответствие кол-ва значений в строке несоответствию кол-ву заголовков полей приводит к отказу от обработки этой строки.</p><p>Даные об ошибках импорта хранятся в логе <i>cfi.php</i> в стандартной папке логов Joomla.</p><p>При отсутсвии ошибок импорта данных импортируемый файл удаляется, в противном случае файл сохраняется в стандартной папке временных файлов Joomla.</p>"
+
 PLG_CFI_DESC_WARN_LABEL="Отказ от ответственности"
 PLG_CFI_DESC_WARN="<p>Данные дополнительных полей записываются в БД прямыми запросами и не подвергаются какой-либо обработке. Ввиду того, что в этих данных могут присутствовать теги html-разметки, json-строки или иные строковые конструкции, содержащие специализированные символы, <strong>экранирование данных не производится!</strong> Пожалуйста, обеспечьте безопасность импортируемых данных на этапе генерации файла для импорта данных в Joomla.</p><hr><p class='text-error'><strong>Разработчик плагина не несёт ответственность за некорректное содержимое импортируемых файлов, которое может вывести из строя ваш сайт</strong>.</p>"
 
