--- a/language/en-GB/plg_system_cfi.ini
+++ b/language/en-GB/plg_system_cfi.ini
@@ -1,73 +1,72 @@
-; @package    System - CFI
+; @package     System - CFI
 ; @subpackage  System.cfi
-; @copyright   Copyright (C) Aleksey A. Morozov. All rights reserved.
+; @copyright   Copyright (C) Sergey Tolkachyov. All rights reserved.
 ; @license     GNU General Public License version 3 or later; see http://www.gnu.org/licenses/gpl-3.0.txt
 
 PLG_CFI="System - CFI"
-PLG_CFI_XML_DESCRIPTION="Plugin for importing and exporting articles with additional fields"
-PLG_CFI_PARAM_CP="Code page for file conversion"
-PLG_CFI_PARAM_SHOWDESC="Show a description of the format of the imported file"
-PLG_CFI_BUTTON="Import / export CSV"
-PLG_CFI_BUTTON_TITLE="Import and export data data from/to CSV"
-PLG_CFI_CB_UTF_CONVERT="Convert encoding UTF-8 <=> %s (encoding is selected in the plugin parameters)"
+PLG_CFI_DESC="Plugin for importing and exporting materials with additional fields"
+PLG_CFI_PARAM_CP="The code page for file conversion"
+PLG_CFI_PARAM_SHOWDESC="Show a description about the format of the imported file"
+PLG_CFI_BUTTON="Import/Export to CSV"
+PLG_CFI_BUTTON_TITLE="Import and export data data from and to CSV"
+PLG_CFI_CB_UTF_CONVERT="Convert UTF-8 encoding <=> %s (encoding is selected in the plugin parameters, used for tabular editors)"
 
 PLG_CFI_EXPORT = "Export"
 PLG_CFI_EXPORT_PARAMS_LABEL="Export parameters"
-PLG_CFI_EXPORT_PARAMS_USE_TAGS = "Export tags"
-PLG_CFI_EXPORT_PARAMS_USE_CUSTOM_FIELDS = "Export fields"
-PLG_CFI_EXPORT_PARAMS_ARTICLE_PROPS_LIST = "Article properties"
+PLG_CFI_EXPORT_PARAMS_USE_TAGS = "Unloading tags"
+PLG_CFI_EXPORT_PARAMS_USE_CUSTOM_FIELDS = "Unloading fields"
+PLG_CFI_EXPORT_PARAMS_ARTICLE_PROPS_LIST = "Material data"
+PLG_CFI_EXPORT_DOWNLOAD_BTN = "Download"
+PLG_CFI_EXPORT_FILTER_LABEL="Applied filters"
+PLG_CFI_EXPORT_ARTICLE_PROPS_LABEL="Material properties"
+PLG_CFI_EXPORT_ARTICLE_FIELDS_LABEL="Custom fields"
+PLG_CFI_EXPORT_SUCCESS="Export completed"
+PLG_CFI_EXPORT_ERROR="Data export error"
 
-PLG_CFI_EXPORT_CUSTOM_FIELDS_DISCLAIMER="Custom content fields can belong to different categories. Make sure that all the selected categories have the same set of fields. Otherwise, data structure errors may occur during export."
-
-PLG_CFI_EXPORT_SUCCESS="Export complete"
-PLG_CFI_EXPORT_ERROR="Error exporting data"
-PLG_CFI_EXPORT_NO_CATEGORY="Category not specified or incorrectly specified"
-PLG_CFI_EXPORT_GET_CONTENT="Error getting list of articles"
-PLG_CFI_EXPORT_EMPTY_CONTENT="The list of articles for the specified category is empty"
+PLG_CFI_EXPORT_CUSTOM_FIELDS_DISCLAIMER="User-defined content fields can belong to different categories. Make sure that all the selected categories have the same set of fields. Otherwise, data structure errors may occur during export."
 PLG_CFI_EXPORT_FILE_CREATE="Error creating the resulting file: no write access to the file"
 PLG_CFI_EXPORT_ERROR_CONVERT="Error transcoding the file to the specified encoding"
-PLG_CFI_EXPORT_ERROR_AFTER_CONVERT="Error writing file after transcoding"
-PLG_CFI_EXPORT_ERROR_BEFORE_CONVERT="Error reading file for transcoding"
+PLG_CFI_EXPORT_ERROR_AFTER_CONVERT="Error writing a file after transcoding"
+PLG_CFI_EXPORT_ERROR_BEFORE_CONVERT="Error reading a file for transcoding"
 
 ; Import
 PLG_CFI_IMPORT = "Import"
-PLG_CFI_IMPORT_UPLOAD_ERROR_UPLOAD_NO_FILE = "No file specified"
-PLG_CFI_IMPORT_UPLOAD_ERROR_UPLOAD_FILE_TOO_BIG = "File is too large"
-PLG_CFI_IMPORT_UPLOAD_ERROR_UPLOAD_WRONG_MIME_TYPE = "Wrong file MIME-type"
-PLG_CFI_IMPORT_UPLOAD_FILE_OK = "File successfully uploaded"
-PLG_CFI_IMPORT_UPLOAD_SELECT_FILE = "Select file"
+PLG_CFI_IMPORT_UPLOAD_DRAG_FILE_HERE="Drag and drop the file to upload into the field"
 
-PLG_CFI_IMPORT_UPLOAD_WARN_SERVER_DENY_FILE_UPLOAD = "Downloading files is denied on the server."
-PLG_CFI_IMPORT_UPLOAD_WARN_NO_FILE_SELECTED = "Error receiving a file from the temporary server environment"
-PLG_CFI_IMPORT_UPLOAD_WARN_UPLOADERROR = "Couldn't upload the file to the server."
+PLG_CFI_IMPORT_UPLOAD_ERROR_UPLOAD_NO_FILE = "File not specified"
+PLG_CFI_IMPORT_UPLOAD_ERROR_UPLOAD_FILE_TOO_BIG = "Selected file is too large"
+PLG_CFI_IMPORT_UPLOAD_ERROR_UPLOAD_WRONG_MIME_TYPE = "Invalid MIME file type"
+PLG_CFI_IMPORT_UPLOAD_ERROR_UPLOAD_UNKNOWN = "Unknown error or incorrect JSON output."
+PLG_CFI_IMPORT_UPLOAD_ERROR_UPLOAD_EMPTY = "Error: The server returned an empty response."
+PLG_CFI_IMPORT_UPLOAD_FILE_OK = "File uploaded successfully"
+PLG_CFI_IMPORT_UPLOAD_SELECT_FILE = "Or select a file"
+
+PLG_CFI_IMPORT_UPLOAD_VARN_SERVER_DENY_FILE_UPLOAD = "File uploads are prohibited on the server"
+PLG_CFI_IMPORT_UPLOAD_VARN_NO_FILE_SELECTED = "Error receiving a file from the temporary environment of the server"
+PLG_CFI_IMPORT_UPLOAD_VARN_UPLOADERROR = "Failed to upload a file to the server."
 PLG_CFI_IMPORT_UPLOAD_FAIL="Error moving a file to a temporary directory for further processing"
 
 PLG_CFI_IMPORT_UPLOADED_FILE_INFO_FILENAME ="File"
-PLG_CFI_IMPORT_UPLOADED_FILE_INFO_LINES ="Lines"
+PLG_CFI_IMPORT_UPLOADED_FILE_INFO_LINES ="Number of lines"
 
-PLG_CFI_FILE_NOTHING="Missing file to download"
-PLG_CFI_FILE_ERROR="Error loading file"
-PLG_CFI_FILE_SIZE="File size error: file is empty"
-PLG_CFI_FILE_TYPE="Invalid file type: expected CSV"
+PLG_CFI_IMPORT_GETCSVMETADATA_ERROR_OPEN_FILE="Couldn't open file: %s"
+PLG_CFI_IMPORT_GETCSVMETADATA_ERROR_READ_CSV_HEADERS="Couldn't read headers from the file: %s"
 
-PLG_CFI_IMPORT_GET_CATEGORIES="Error getting list of article categories"
-PLG_CFI_IMPORT_EMPTY="The file does not contain data to import or does not contain a row of field headers"
-PLG_CFI_IMPORT_NO_COLUMN="There are no required articleid and articletitle fields"
+PLG_CFI_IMPORT_GET_CATEGORIES="Error getting a list of material categories"
+PLG_CFI_IMPORT_EMPTY="The file does not contain data to import or does not contain a field header string"
+PLG_CFI_IMPORT_NO_COLUMN="The required articleid field is missing"
 PLG_CFI_IMPORT_COLUMN_EXCEPT="The number of values in the row does not match the number of declared columns"
-PLG_CFI_IMPORT_LOAD_ARTICLE="Error loading article with id %s"
-PLG_CFI_IMPORT_SAVE_ARTICLE="Error saving article"
-PLG_CFI_IMPORT_SAVENEW_ARTICLE="Article saved as new"
+PLG_CFI_IMPORT_LOAD_ARTICLE="Error loading material from id %s"
+PLG_CFI_IMPORT_SAVE_ARTICLE="Error saving material"
+PLG_CFI_IMPORT_SAVENEW_ARTICLE="The material is saved as new"
 PLG_CFI_IMPORT_SAVE_FIELDS="Error saving field values: %s"
 
-PLG_CFI_IMPORT_SUCCESS="Import complete"
-PLG_CFI_IMPORT_ERROR="Error importing data"
+PLG_CFI_IMPORT_CFI_IMPORT_PROGRESS_DATA_CONTINUES="Missing"
+PLG_CFI_IMPORT_CFI_IMPORT_PROGRESS_DATA_ERRORS="Errors"
+PLG_CFI_IMPORT_CFI_IMPORT_PROGRESS_DATA_INSERTS="New"
+PLG_CFI_IMPORT_CFI_IMPORT_PROGRESS_DATA_UPDATES="Updated"
+PLG_CFI_IMPORT_CFI_IMPORT_PROGRESS_DATA_ERROR_LIST="Error list"
+PLG_CFI_IMPORT_SUCCESS="Import completed"
+PLG_CFI_IMPORT_ERROR="Data import error"
 
-PLG_CFI_RESULT="Imported records from file: %s. New articles added: %s. Updated articles: %s"
-PLG_CFI_RESULT_ERROR="Raw file lines: %s"
-
-PLG_CFI_DESC_FORMAT_LABEL="Description of the file format"
-PLG_CFI_DESC_FORMAT="<p><strong>Description of the file format of the imported articles with additional fields</strong></p><p>File format for imported data: <strong>CSV</strong>. Default a file encoding, if the option «Convert encoding…» is not set: <strong>UTF-8 w/o BOM</strong>. The data separator in the CSV file must be only the <code>;</code> symbol.</p><p>The first line of a file is always the file field headers.</p><p>Reserved field names:</p><p><code>articleid</code> – id of the updated article, contains 0 for newly added article, ignores rows for articles with non-existent id (<i>required field</i>);</p><p><code>articlecat</code> – id of the category of the article, for new articles if the field is missing or the id of the nonexistent category is specified, the category «Uncategorised» will be used, for existing articles will be ignored;<p><code>articletitle</code> – article title (<i>required field</i>);</p><p><code>articlelang</code> – language of the article, if this field is absent, the article will be available for all languages;</p><p><code>articleintrotext</code> – introductory text of the article;</p><p><code>articlefulltext</code> – the full text of the article.</p><p>The fields <i>articleid</i> and <i>articletitle</i> are required; if they are absent, data will not be imported from the file.</p><p>Any other field names are taken as the names of additional article fields. In cases of absence of the indicated fields from the article, the latter will be ignored.</p><p>Inconsistency of the number of values ​​in the row to the discrepancy in the number of field headers leads to the refusal to process this row.</p><p>Data on import errors is stored in the <i>cfi.php</i> log in the standard Joomla log folder.</p><p>If there are no data import errors, the imported file is deleted, otherwise the file is saved in the standard Joomla temporary files folder.</p>"
-PLG_CFI_DESC_WARN_LABEL="Disclaimer"
-PLG_CFI_DESC_WARN="<p>The data of additional fields are written to the database by direct queries and are not subjected to any processing. Due to the fact that html markup tags, json strings or other string constructs containing specialized characters may be present in this data, <strong>Data is not shielded!</strong> Please ensure the safety of the imported data during the generation of the file for importing data into Joomla.</p><hr><p class='text-error'><strong>The plugin developer is not responsible for the incorrect contents of the imported files, which may damage your site</strong>.</p>"
-PLG_CFI_DESC_SD="<small><i>The display of the format description of the imported file can be disabled in the cfi plugin settings.</i></small>"
-PLG_CFI_PROCESS_CANCELED_BY_USER = "Process canceled by user"
+PLG_CFI_PROCESS_CANCELED_BY_USER = "The process was canceled by the user"
