--- a/language/ru-RU/plg_system_cfi.ini
+++ b/language/ru-RU/plg_system_cfi.ini
@@ -1,6 +1,6 @@
-; @package    System - CFI
+; @package     System - CFI
 ; @subpackage  System.cfi
-; @copyright   Copyright (C) Aleksey A. Morozov. All rights reserved.
+; @copyright   Copyright (C) Sergey Tolkachyov. All rights reserved.
 ; @license     GNU General Public License version 3 or later; see http://www.gnu.org/licenses/gpl-3.0.txt
 
 PLG_CFI="Система - CFI"
@@ -10,6 +10,7 @@ PLG_CFI_PARAM_SHOWDESC="Показывать описание о формате 
 PLG_CFI_BUTTON="Импорт / экспорт в CSV"
 PLG_CFI_BUTTON_TITLE="Импорт и экспорт данных данных из CSV и в CSV"
 PLG_CFI_CB_UTF_CONVERT="Преобразовывать кодировку UTF-8 <=> %s (кодировка выбирается в параметрах плагина, применяется для табличных редакторов)"
+PLG_CFI_PARAMS_
 
 PLG_CFI_EXPORT = "Экспорт"
 PLG_CFI_EXPORT_PARAMS_LABEL="Параметры экспорта"
@@ -49,14 +50,12 @@ PLG_CFI_IMPORT_UPLOAD_FAIL="Ошибка перемещения файла во 
 PLG_CFI_IMPORT_UPLOADED_FILE_INFO_FILENAME ="Файл"
 PLG_CFI_IMPORT_UPLOADED_FILE_INFO_LINES ="Количество строк"
 
-;PLG_CFI_FILELABEL="Выберите файл или перетащите его сюда для импорта данных"
-;PLG_CFI_FILELABEL_WORKTITLE="Ожидайте загрузки файла и обработки данных в нём..."
-;PLG_CFI_FILELABEL_SUCCESS="Обработка файла завершена. Страница обновится через <span id='cfi-result-counter'>10</span> сек."
-;PLG_CFI_FILELABEL_ERROR="Ошибка"
+PLG_CFI_IMPORT_GETCSVMETADATA_ERROR_OPEN_FILE="Не удалось открыть файл: %s"
+PLG_CFI_IMPORT_GETCSVMETADATA_ERROR_READ_CSV_HEADERS="Не удалось прочитать заголовки из файла: %s"
 
 PLG_CFI_IMPORT_GET_CATEGORIES="Ошибка получения списка категорий материалов"
 PLG_CFI_IMPORT_EMPTY="Файл не содержит данных для импорта или не содержит строку заголовков полей"
-PLG_CFI_IMPORT_NO_COLUMN="Отсутствуют обязательные поля articleid и articletitle"
+PLG_CFI_IMPORT_NO_COLUMN="Отсутствует обязательное поле articleid"
 PLG_CFI_IMPORT_COLUMN_EXCEPT="Кол-во значений в строке не соответствует кол-ву объявленных колонок"
 PLG_CFI_IMPORT_LOAD_ARTICLE="Ошибка загрузки материала с id %s"
 PLG_CFI_IMPORT_SAVE_ARTICLE="Ошибка сохранения материала"
@@ -71,15 +70,4 @@ PLG_CFI_IMPORT_CFI_IMPORT_PROGRESS_DATA_ERROR_LIST="Список ошибок"
 PLG_CFI_IMPORT_SUCCESS="Импорт завершён"
 PLG_CFI_IMPORT_ERROR="Ошибка импорта данных"
 
-
-PLG_CFI_RESULT="Импортировано записей из файла: %s Добавлено новых материалов: %s. Обновлено материалов: %s"
-PLG_CFI_RESULT_ERROR="Необработанных строк файла: %s"
-
-PLG_CFI_DESC_FORMAT_LABEL="Описание формата файла"
-PLG_CFI_DESC_FORMAT="<p><strong>Описание формата файла импортируемых материалов с участием дополнительных полей</strong></p><p>Формат файла импортируемых либо экспортируемых данных: <strong>CSV</strong>, кодировка файла по умолчанию, если не установлена опция «Преобразовывать кодировку…»: <strong>UTF-8 w/o BOM</strong>. Разделителем данных в CSV-файле должен быть только символ <code>;</code>.</p><p>Первая строка файла всегда представляет собой заголовки полей файла.</p><p>Зарезервированные имена полей:</p><p><code>articleid</code> – id обновляемого материала, содержит значение 0 для вновь добавляемого материала, игнорирует строки для материалов с несуществующим id (<i>обязательное поле</i>);</p><p><code>articletitle</code> – заголовок материала (<i>обязательное поле</i>);</p><p><code>articlecat</code> – id категории материала, для новых материалов при отстутсвии поля или указания id несуществующей категории будет применена категория «Uncategorised», для существующих материалов игнорируется;</p><p><code>articlelang</code> – язык материала, для новых материалов при отстутствии поля материал будет доступен для всех языков, для существующих материалов игнорируется;</p><p><code>articleintrotext</code> – вступительный текст материала;</p><p><code>articlefulltext</code> – полный текст материала.</p><p>Поля <i>articleid</i> и <i>articletitle</i> являются обязательными, при их отстутствии импорт данных из файла не производится.</p><p>Любые иные имена полей принимаются за имена дополнительных полей материала. В случаях отстутствия у материала указанных полей последние будут игнорироваться.</p><p>Несоответствие кол-ва значений в строке несоответствию кол-ву заголовков полей приводит к отказу от обработки этой строки.</p><p>Даные об ошибках импорта хранятся в логе <i>cfi.php</i> в стандартной папке логов Joomla.</p><p>При отсутсвии ошибок импорта данных импортируемый файл удаляется, в противном случае файл сохраняется в стандартной папке временных файлов Joomla.</p>"
-
-PLG_CFI_DESC_WARN_LABEL="Отказ от ответственности"
-PLG_CFI_DESC_WARN="<p>Данные дополнительных полей записываются в БД прямыми запросами и не подвергаются какой-либо обработке. Ввиду того, что в этих данных могут присутствовать теги html-разметки, json-строки или иные строковые конструкции, содержащие специализированные символы, <strong>экранирование данных не производится!</strong> Пожалуйста, обеспечьте безопасность импортируемых данных на этапе генерации файла для импорта данных в Joomla.</p><hr><p class='text-error'><strong>Разработчик плагина не несёт ответственность за некорректное содержимое импортируемых файлов, которое может вывести из строя ваш сайт</strong>.</p>"
-
-PLG_CFI_DESC_SD="<small><i>Показ описания формата импортируемого файла можно отключить в параметрах плагина cfi.</i></small>"
 PLG_CFI_PROCESS_CANCELED_BY_USER = "Процесс отменён пользователем"
