Документация в языковые константы.

--- a/language/en-GB/plg_system_cfi.ini
+++ b/language/en-GB/plg_system_cfi.ini
@@ -4,64 +4,79 @@
 ; @license     GNU General Public License version 3 or later; see http://www.gnu.org/licenses/gpl-3.0.txt
 
 PLG_CFI="System - CFI"
-PLG_CFI_DESC="Plugin for importing and exporting materials with additional fields"
-PLG_CFI_PARAM_CP="The code page for file conversion"
-PLG_CFI_PARAM_SHOWDESC="Show a description about the format of the imported file"
-PLG_CFI_BUTTON="Import/Export to CSV"
-PLG_CFI_BUTTON_TITLE="Import and export data data from and to CSV"
-PLG_CFI_CB_UTF_CONVERT="Convert UTF-8 encoding <=> %s (encoding is selected in the plugin parameters, used for tabular editors)"
+PLG_CFI_DESC="Plugin for importing and exporting articles with custom fields"
 
-PLG_CFI_EXPORT = "Export"
+PLG_CFI_DESC_FULL_LABEL="Execution time and article volumes"
+PLG_CFI_DESC_FULL_DESC="<p>The PHP script is set to a limit of <code>0</code>. Then the time limits are affected by the web server parameters: Nginx (<code>fastcgi_read_timeout</code>, <code>proxy_read_timeout</code>, <code>client_body_timeout</code>), Apache (<code>Timeout</code>, <code>ProxyTimeout</code>), PHP-FPM (<code>request_terminate_timeout</code>), which may cause the script to stop by the server.</p><p>Export is faster than import. Import speed on a weak server can range from 3–4 to 10 articles per second. Export volume on a weak server can reach tens of thousands of articles including custom fields. In tests, 14,000 articles without custom fields were exported in slightly under 1.5 minutes.</p><p>The number of imported article properties has a big impact, including whether there are non-editable properties (<code>hits</code>, <code>modified</code>, etc.), as well as the number of custom fields. The more custom fields, the slower the import. It is recommended to experimentally select the optimal amount of imported data and to import large numbers of articles in parts, since long and heavy processes are usually performed via the CLI.</p>"
+
+PLG_CFI_DESC_FULL_EXPORT_LABEL="How does export work?"
+PLG_CFI_DESC_FULL_EXPORT="<p>During export, you can export up to several tens of thousands of articles.</p> <h4>Article filtering</h4> <p>The export respects Joomla administrator panel article filters (search parameters). You can export articles from one or several selected categories, only featured, only published, only with specific tags, and so on. The <code>items per page</code> parameter affects the number of articles in a batch retrieved from the database at a time.</p> <h4>Article properties for export</h4> <p>In the export window, you can select which article properties (<code>title</code>, <code>catid</code>, etc.) should be exported. All article properties are prefixed with <code>article</code>: <code>id</code> => <code>articleid</code>. Article properties are used as table headers. The <code>id</code> article property is always exported. Additionally, tag IDs can be exported.</p><h4>Article custom fields</h4><p>You can select which custom fields should be exported or not exported at all. The system names of the custom fields are used as table headers.</p><p>Article custom fields may belong to different categories. Make sure that all selected categories have the same set of fields.</p><p>If some custom fields belong to all categories and some only to one category, the export will merge them into one table.</p><p>If the export contains articles from different categories whose fields belong only to those categories, the export will <strong>try</strong> to merge them into one table. However, the correctness of the export in this case is not guaranteed.</p><h4>Example</h4><p>You can select only the <code>id</code> property and the custom fields you need. The import will then correctly process such a table.</p>"
+
+PLG_CFI_DESC_FULL_IMPORT_LABEL="How does import work?"
+PLG_CFI_DESC_FULL_IMPORT="<p>With import, you can create new articles or update existing ones. The <code>articleid</code> column in the import table is used as the article identifier.</p><p>If the <code>articleid</code> column is empty or <code>0</code>, the import will create a new article. If it is set, the article with the specified <code>articleid</code> will be updated.</p><h4>Creating new articles</h4><p>If no category is specified for new articles (the <code>catid</code> column is missing or empty), the import will create the article in the default category (the first category in the list). For a new article, the <code>articletitle</code> field (article title) is mandatory.</p><h4>Updating articles</h4><p>For updating articles, the <code>articleid</code> field is mandatory. In the other columns, you can specify any article properties that you can see in the article creation form, including non-editable ones (<code>hits</code> – view count, <code>modified</code> – last modification date, etc.).</p><p>You can also use import to update <strong>only</strong> article custom fields. To do this, the import table must contain the <code>articleid</code> column, and the other column headers must match the system names of the custom fields. The data format must also match what these fields expect: in some cases simple strings, and in others arrays or <code>json</code>.</p>"
+
+PLG_CFI_DESC_FULL_FOR_DEVELOPERS_LABEL="For developers"
+PLG_CFI_DESC_FULL_FOR_DEVELOPERS="<p>During import and export, you can process data using your own plugins. Create a plugin in the <code>cfi</code> group. The plugin is executed in an isolated dispatcher, so no other plugins will be triggered, not even system ones.</p><h4>Import</h4><p>Add the event <code>onImportPrepareArticleData($event)</code> to your plugin. The event is triggered for each row of the imported table. You can get the data: <code>$colummns = $event->getArgument('columns');</code>, <code>$strNum = $event->getArgument('strNum');</code>, <code>$article = $event->getArgument('article');</code>. Return the processed data back to the import process: <code>$event->setArgument('article', $article);</code>. The number of columns in the <code>$columns</code> array must match the number of elements in the <code>$article</code> array, otherwise an error will occur. <code>$strNum</code> contains the row number in the import table.</p><h4>Export</h4><p>Add the event <code>onExportPrepareData($event)</code> to your plugin. The export receives a list of articles from the model with <code>list.limit</code> according to the settings. The event is triggered for each pagination page of the article list. You can get the data: <code>$colummns = $event->getArgument('columns');</code> – exported data, table headers. <code>$articles = $event->getArgument('articles');</code> – an array with full article data. Return the processed data back to the export process: <code>$event->setArgument('articles', $articles);</code>.</p>"
+
+PLG_CFI_PARAM_CP="Code page for file conversion"
+PLG_CFI_PARAM_SHOWDESC="Show description of the imported file format"
+PLG_CFI_BUTTON="Import / Export to CSV"
+PLG_CFI_BUTTON_TITLE="Import and export data from CSV and to CSV"
+PLG_CFI_CB_UTF_CONVERT="Convert encoding UTF-8 <=> %s (encoding is selected in the plugin parameters, used for spreadsheet editors)"
+
+; Export
+PLG_CFI_EXPORT="Export"
 PLG_CFI_EXPORT_PARAMS_LABEL="Export parameters"
-PLG_CFI_EXPORT_PARAMS_USE_TAGS = "Unloading tags"
-PLG_CFI_EXPORT_PARAMS_USE_CUSTOM_FIELDS = "Unloading fields"
-PLG_CFI_EXPORT_PARAMS_ARTICLE_PROPS_LIST = "Material data"
-PLG_CFI_EXPORT_DOWNLOAD_BTN = "Download"
+PLG_CFI_EXPORT_PARAMS_USE_TAGS="Export tags"
+PLG_CFI_EXPORT_PARAMS_USE_CUSTOM_FIELDS="Export fields"
+PLG_CFI_EXPORT_PARAMS_ARTICLE_PROPS_LIST="Article data"
+PLG_CFI_EXPORT_PARAMS_ARTICLE_PROPS_LIST_DESC="Select which Joomla article properties will be selected by default during export. The <code>id</code> property (<code>articleid</code>) is always exported"
+PLG_CFI_EXPORT_DOWNLOAD_BTN="Download"
 PLG_CFI_EXPORT_FILTER_LABEL="Applied filters"
-PLG_CFI_EXPORT_ARTICLE_PROPS_LABEL="Material properties"
+PLG_CFI_EXPORT_ARTICLE_PROPS_LABEL="Article properties"
 PLG_CFI_EXPORT_ARTICLE_FIELDS_LABEL="Custom fields"
 PLG_CFI_EXPORT_SUCCESS="Export completed"
 PLG_CFI_EXPORT_ERROR="Data export error"
 
-PLG_CFI_EXPORT_CUSTOM_FIELDS_DISCLAIMER="User-defined content fields can belong to different categories. Make sure that all the selected categories have the same set of fields. Otherwise, data structure errors may occur during export."
-PLG_CFI_EXPORT_FILE_CREATE="Error creating the resulting file: no write access to the file"
-PLG_CFI_EXPORT_ERROR_CONVERT="Error transcoding the file to the specified encoding"
-PLG_CFI_EXPORT_ERROR_AFTER_CONVERT="Error writing a file after transcoding"
-PLG_CFI_EXPORT_ERROR_BEFORE_CONVERT="Error reading a file for transcoding"
+PLG_CFI_EXPORT_CUSTOM_FIELDS_DISCLAIMER="Article custom fields may belong to different categories. Make sure all selected categories have the same set of fields. Otherwise, data structure errors may occur during export."
+PLG_CFI_EXPORT_FILE_CREATE="Error creating the result file: no permission to write the file"
+PLG_CFI_EXPORT_ERROR_CONVERT="File re-encoding error"
+PLG_CFI_EXPORT_ERROR_AFTER_CONVERT="Error writing the file after re-encoding"
+PLG_CFI_EXPORT_ERROR_BEFORE_CONVERT="Error reading the file for re-encoding"
 
 ; Import
-PLG_CFI_IMPORT = "Import"
-PLG_CFI_IMPORT_UPLOAD_DRAG_FILE_HERE="Drag and drop the file to upload into the field"
+PLG_CFI_IMPORT="Import"
+PLG_CFI_IMPORT_UPLOAD_DRAG_FILE_HERE="Drag a file here to upload"
 
-PLG_CFI_IMPORT_UPLOAD_ERROR_UPLOAD_NO_FILE = "File not specified"
-PLG_CFI_IMPORT_UPLOAD_ERROR_UPLOAD_FILE_TOO_BIG = "Selected file is too large"
-PLG_CFI_IMPORT_UPLOAD_ERROR_UPLOAD_WRONG_MIME_TYPE = "Invalid MIME file type"
-PLG_CFI_IMPORT_UPLOAD_ERROR_UPLOAD_UNKNOWN = "Unknown error or incorrect JSON output."
-PLG_CFI_IMPORT_UPLOAD_ERROR_UPLOAD_EMPTY = "Error: The server returned an empty response."
-PLG_CFI_IMPORT_UPLOAD_FILE_OK = "File uploaded successfully"
-PLG_CFI_IMPORT_UPLOAD_SELECT_FILE = "Or select a file"
+PLG_CFI_IMPORT_UPLOAD_ERROR_UPLOAD_NO_FILE="No file specified"
+PLG_CFI_IMPORT_UPLOAD_ERROR_UPLOAD_FILE_TOO_BIG="The selected file is too large"
+PLG_CFI_IMPORT_UPLOAD_ERROR_UPLOAD_WRONG_MIME_TYPE="Invalid MIME type"
+PLG_CFI_IMPORT_UPLOAD_ERROR_UPLOAD_UNKNOWN="Unknown error or invalid JSON output."
+PLG_CFI_IMPORT_UPLOAD_ERROR_UPLOAD_EMPTY="Error: Server returned an empty response."
+PLG_CFI_IMPORT_UPLOAD_FILE_OK="File uploaded successfully"
+PLG_CFI_IMPORT_UPLOAD_SELECT_FILE="Or select a file"
 
-PLG_CFI_IMPORT_UPLOAD_VARN_SERVER_DENY_FILE_UPLOAD = "File uploads are prohibited on the server"
-PLG_CFI_IMPORT_UPLOAD_VARN_NO_FILE_SELECTED = "Error receiving a file from the temporary environment of the server"
-PLG_CFI_IMPORT_UPLOAD_VARN_UPLOADERROR = "Failed to upload a file to the server."
-PLG_CFI_IMPORT_UPLOAD_FAIL="Error moving a file to a temporary directory for further processing"
+PLG_CFI_IMPORT_UPLOAD_WARN_SERVER_DENY_FILE_UPLOAD="File uploads are disabled on the server"
+PLG_CFI_IMPORT_UPLOAD_WARN_NO_FILE_SELECTED="Error retrieving the file from the server temporary environment"
+PLG_CFI_IMPORT_UPLOAD_WARN_UPLOADERROR="Failed to upload the file to the server."
+PLG_CFI_IMPORT_UPLOAD_FAIL="Error moving the file to the temporary directory for further processing"
 
-PLG_CFI_IMPORT_UPLOADED_FILE_INFO_FILENAME ="File"
-PLG_CFI_IMPORT_UPLOADED_FILE_INFO_LINES ="Number of lines"
+PLG_CFI_IMPORT_UPLOADED_FILE_INFO_FILENAME="File"
+PLG_CFI_IMPORT_UPLOADED_FILE_INFO_LINES="Number of rows"
 
-PLG_CFI_IMPORT_GETCSVMETADATA_ERROR_OPEN_FILE="Couldn't open file: %s"
-PLG_CFI_IMPORT_GETCSVMETADATA_ERROR_READ_CSV_HEADERS="Couldn't read headers from the file: %s"
+PLG_CFI_IMPORT_GETCSVMETADATA_ERROR_OPEN_FILE="Failed to open file: %s"
+PLG_CFI_IMPORT_GETCSVMETADATA_ERROR_READ_CSV_HEADERS="Failed to read headers from file: %s"
 
-PLG_CFI_IMPORT_GET_CATEGORIES="Error getting a list of material categories"
-PLG_CFI_IMPORT_EMPTY="The file does not contain data to import or does not contain a field header string"
-PLG_CFI_IMPORT_NO_COLUMN="The required articleid field is missing"
+PLG_CFI_IMPORT_GET_CATEGORIES="Error retrieving article categories"
+PLG_CFI_IMPORT_EMPTY="The file contains no data for import or does not contain a header row"
+PLG_CFI_IMPORT_NO_COLUMN="Missing required field articleid"
 PLG_CFI_IMPORT_COLUMN_EXCEPT="The number of values in the row does not match the number of declared columns"
-PLG_CFI_IMPORT_LOAD_ARTICLE="Error loading material from id %s"
-PLG_CFI_IMPORT_SAVE_ARTICLE="Error saving material"
-PLG_CFI_IMPORT_SAVENEW_ARTICLE="The material is saved as new"
+PLG_CFI_IMPORT_LOAD_ARTICLE="Error loading article with id %s"
+PLG_CFI_IMPORT_SAVE_ARTICLE="Error saving article"
+PLG_CFI_IMPORT_SAVENEW_ARTICLE="Article saved as new"
 PLG_CFI_IMPORT_SAVE_FIELDS="Error saving field values: %s"
 
-PLG_CFI_IMPORT_CFI_IMPORT_PROGRESS_DATA_CONTINUES="Missing"
+PLG_CFI_IMPORT_CFI_IMPORT_PROGRESS_DATA_CONTINUES="Skipped"
 PLG_CFI_IMPORT_CFI_IMPORT_PROGRESS_DATA_ERRORS="Errors"
 PLG_CFI_IMPORT_CFI_IMPORT_PROGRESS_DATA_INSERTS="New"
 PLG_CFI_IMPORT_CFI_IMPORT_PROGRESS_DATA_UPDATES="Updated"
@@ -69,4 +84,4 @@ PLG_CFI_IMPORT_CFI_IMPORT_PROGRESS_DATA_ERROR_LIST="Error list"
 PLG_CFI_IMPORT_SUCCESS="Import completed"
 PLG_CFI_IMPORT_ERROR="Data import error"
 
-PLG_CFI_PROCESS_CANCELED_BY_USER = "The process was canceled by the user"
+PLG_CFI_PROCESS_CANCELED_BY_USER="Process canceled by user"
