Правки пути к tmp в случаях, если не определено.

--- a/language/en-GB/plg_system_cfi.ini
+++ b/language/en-GB/plg_system_cfi.ini
@@ -43,6 +43,7 @@ PLG_CFI_EXPORT_FILE_CREATE="Error creating the result file: no permission to wri
 PLG_CFI_EXPORT_ERROR_CONVERT="File re-encoding error"
 PLG_CFI_EXPORT_ERROR_AFTER_CONVERT="Error writing the file after re-encoding"
 PLG_CFI_EXPORT_ERROR_BEFORE_CONVERT="Error reading the file for re-encoding"
+PLG_CFI_EXPORT_FILE_INFO="%s file is open in %s mode. w - write to a new one. a - complement the existing one."
 
 ; Import
 PLG_CFI_IMPORT="Import"
@@ -50,7 +51,7 @@ PLG_CFI_IMPORT_UPLOAD_DRAG_FILE_HERE="Drag a file here to upload"
 
 PLG_CFI_IMPORT_UPLOAD_ERROR_UPLOAD_NO_FILE="No file specified"
 PLG_CFI_IMPORT_UPLOAD_ERROR_UPLOAD_FILE_TOO_BIG="The selected file is too large"
-PLG_CFI_IMPORT_UPLOAD_ERROR_UPLOAD_WRONG_MIME_TYPE="Invalid MIME type"
+PLG_CFI_IMPORT_UPLOAD_ERROR_UPLOAD_WRONG_FILE_TYPE="Invalid file type"
 PLG_CFI_IMPORT_UPLOAD_ERROR_UPLOAD_UNKNOWN="Unknown error or invalid JSON output."
 PLG_CFI_IMPORT_UPLOAD_ERROR_UPLOAD_EMPTY="Error: Server returned an empty response."
 PLG_CFI_IMPORT_UPLOAD_FILE_OK="File uploaded successfully"
