--- a/language/ru-RU/plg_system_cfi.ini
+++ b/language/ru-RU/plg_system_cfi.ini
@@ -39,6 +39,7 @@ PLG_CFI_EXPORT_FILE_CREATE="Ошибка создания результирую
 PLG_CFI_EXPORT_ERROR_CONVERT="Ошибка перекодирования файла в указанную кодировку"
 PLG_CFI_EXPORT_ERROR_AFTER_CONVERT="Ошибка записи файла после перекодирования"
 PLG_CFI_EXPORT_ERROR_BEFORE_CONVERT="Ошибка чтения файла для перекодирования"
+PLG_CFI_EXPORT_FILE_INFO="Файл %s открыт в режиме %s. w - запись в новый. a - дополняем существующий."
 
 ; Import
 PLG_CFI_IMPORT = "Импорт"
@@ -46,7 +47,7 @@ PLG_CFI_IMPORT_UPLOAD_DRAG_FILE_HERE="Перетащите в поле файл 
 
 PLG_CFI_IMPORT_UPLOAD_ERROR_UPLOAD_NO_FILE = "Не указан файл"
 PLG_CFI_IMPORT_UPLOAD_ERROR_UPLOAD_FILE_TOO_BIG = "Выбранный файл слишком большой"
-PLG_CFI_IMPORT_UPLOAD_ERROR_UPLOAD_WRONG_MIME_TYPE = "Неверный MIME-тип файла"
+PLG_CFI_IMPORT_UPLOAD_ERROR_UPLOAD_WRONG_FILE_TYPE = "Неверный тип файла"
 PLG_CFI_IMPORT_UPLOAD_ERROR_UPLOAD_UNKNOWN = "Неизвестная ошибка или некорректный вывод JSON."
 PLG_CFI_IMPORT_UPLOAD_ERROR_UPLOAD_EMPTY = "Ошибка: Сервер вернул пустой ответ."
 PLG_CFI_IMPORT_UPLOAD_FILE_OK = "Файл успешно загружен"
