Уточнение языковой константы. Добавили текст про ошибку MIME-типа

--- a/language/en-GB/plg_system_cfi.ini
+++ b/language/en-GB/plg_system_cfi.ini
@@ -51,7 +51,7 @@ PLG_CFI_IMPORT_UPLOAD_DRAG_FILE_HERE="Drag a file here to upload"
 
 PLG_CFI_IMPORT_UPLOAD_ERROR_UPLOAD_NO_FILE="No file specified"
 PLG_CFI_IMPORT_UPLOAD_ERROR_UPLOAD_FILE_TOO_BIG="The selected file is too large"
-PLG_CFI_IMPORT_UPLOAD_ERROR_UPLOAD_WRONG_FILE_TYPE="Invalid file type"
+PLG_CFI_IMPORT_UPLOAD_ERROR_UPLOAD_WRONG_FILE_TYPE="Invalid file type. If the error is related to a MIME type, such as text/html, then you can add this MIME type to the allowed ones in the settings of the standard Media manager (menu Content Media Manager settings) or disable MIME type checking altogether (not recommended)."
 PLG_CFI_IMPORT_UPLOAD_ERROR_UPLOAD_UNKNOWN="Unknown error or invalid JSON output."
 PLG_CFI_IMPORT_UPLOAD_ERROR_UPLOAD_EMPTY="Error: Server returned an empty response."
 PLG_CFI_IMPORT_UPLOAD_FILE_OK="File uploaded successfully"
