--- a/language/ru-RU/plg_system_cfi.ini
+++ b/language/ru-RU/plg_system_cfi.ini
@@ -47,7 +47,7 @@ PLG_CFI_IMPORT_UPLOAD_DRAG_FILE_HERE="Перетащите в поле файл 
 
 PLG_CFI_IMPORT_UPLOAD_ERROR_UPLOAD_NO_FILE = "Не указан файл"
 PLG_CFI_IMPORT_UPLOAD_ERROR_UPLOAD_FILE_TOO_BIG = "Выбранный файл слишком большой"
-PLG_CFI_IMPORT_UPLOAD_ERROR_UPLOAD_WRONG_FILE_TYPE = "Неверный тип файла"
+PLG_CFI_IMPORT_UPLOAD_ERROR_UPLOAD_WRONG_FILE_TYPE = "Неверный тип файла. Если ошибка связана с MIME-типом, например text/html, то вы можете добавить этот MIME-тип в разрешённые в настройках стандартного Медиа-менеджера (меню Контент - Медиа-менеджер - настройки) или отключить проверку MIME-типов вообще (не рекомендуется)."
 PLG_CFI_IMPORT_UPLOAD_ERROR_UPLOAD_UNKNOWN = "Неизвестная ошибка или некорректный вывод JSON."
 PLG_CFI_IMPORT_UPLOAD_ERROR_UPLOAD_EMPTY = "Ошибка: Сервер вернул пустой ответ."
 PLG_CFI_IMPORT_UPLOAD_FILE_OK = "Файл успешно загружен"
